fix: Add actual links for CfP and signup buttons, improve callout contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,6 +200,7 @@ body > .container > .content {
 
 .cfp-callout {
     line-height: 4em;
+    color: #FFFFFF;
 }
 
 @media (max-width: 576px) {
